# zquic

./: CHANGELOG.md  CLAUDE.md  CRYPTO_PROJECTS.md  DOCS.md  DOCS_ZCRYPTO.md  FFI_README.md  GAMEPLAN.md  JULY_FFI_STATUS.md  JULY_INTEGRATION.md  JULY_INTEGRATION_FINAL.md  OLDTODO.md  README.md  RELEASE_v0.4.0.md  TODO.md  ZCRYPTO_INTEGRATION.md  ZCRYPTO_ISSUES.md  ZSYNC_GUIDE.md  ZSYNC_MIGRATION.md  ZSYNC_SUPERCHARGE_PLAN.md  build.zig  build.zig.zon
.zig-cache/o/2d58fcd389b58d724a04fa472a0fccb4/: dependencies.zig
benchmarks/: quinn_comparison.zig
bindings/rust/: Cargo.toml  build.rs
bindings/rust/examples/: ghostd_integration.rs
bindings/rust/src/: lib.rs
bindings/rust/tests/: integration_test.rs  integration_tests.rs
bindings/rust/zquic-rs/: Cargo.toml
bindings/rust/zquic-rs/src/: lib.rs
examples/: client.zig  crypto_trading_demo.zig  doq_echo_server.zig  ffi_test.c  ffi_test.zig  ghostbridge_demo.zig  ghostmesh_vpn.zig  ghostscale_vpn.zig  http3_server.zig  integration_test.zig  pq_quic_demo.zig  server.zig
include/: ghostbridge.h  zcrypto.h  zquic.h  zquic_services.h
src/: main.zig  root.zig
src/async/: load_balancer.zig  runtime.zig
src/core/: advanced_congestion_control.zig  congestion.zig  connection.zig  connection_migration.zig  crypto_optimized_congestion.zig  flow_control.zig  packet.zig  packet_crypto.zig  quic_frames.zig  stream.zig  stream_flow_control.zig
src/crypto/: asm_optimizations.zig  async_crypto.zig  comprehensive_tls.zig  enhanced_tls.zig  handshake.zig  hybrid_pq_tls.zig  keys.zig  pq_quic.zig  tls.zig  zero_rtt_resumption.zig
src/doq/: client.zig  message.zig  server.zig
src/ffi/: build_ffi.zig  ghostbridge_ffi.zig  header_gen.zig  zcrypto_ffi.zig  zquic_ffi.zig
src/http3/: advanced_server.zig  frame.zig  middleware.zig  qpack.zig  request.zig  response.zig  router.zig  server.zig
src/monitoring/: crypto_telemetry.zig
src/net/: ipv6.zig  multiplexer.zig  socket.zig  udp.zig
src/performance/: connection_pool.zig  crypto_connection_multiplexer.zig  zero_copy.zig
src/services/: cns_resolver.zig  ghostbridge.zig  wraith.zig  zvm_integration.zig
src/transport/: enhanced_multiplexer.zig
src/utils/: allocator.zig  error.zig
src/vpn/: router.zig
tests/: ghostbridge_integration_test.zig  qc.zig  simple_memory_test.zig  simple_qc_test.zig  standalone_qc.zig  v0_8_2_quality_control.zig  zcrypto_integration_test.zig
