# ZQUIC Safe Rust Wrapper - zquic-rs crate
# High-level safe Rust bindings with async/await support

[package]
name = "zquic"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for ZQUIC post-quantum QUIC library with async support"
license = "Apache-2.0"
repository = "https://github.com/ghostkellz/zquic"
authors = ["GhostChain Team <team@ghostchain.io>"]
keywords = ["quic", "http3", "post-quantum", "async", "networking"]
categories = ["network-programming", "cryptography", "asynchronous"]

[dependencies]
zquic-sys = { path = "..", version = "0.1.0" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[features]
default = ["post-quantum", "ghostbridge"]
post-quantum = ["zquic-sys/post-quantum"]
services = ["zquic-sys/services"]
ghostbridge = ["zquic-sys/ghostbridge"]
wraith = ["zquic-sys/wraith"]
cns = ["zquic-sys/cns"]
serde-support = ["serde"]

[package.metadata.docs.rs]
features = ["post-quantum", "services", "ghostbridge", "wraith", "cns", "serde-support"]
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]